--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2018"
 [dependencies]
 regex = "1.5.4"
 lazy_static = "1.4.0"
+
+[dependencies.pyo3]
+version = "0.13.2"
+features = ["auto-initialize"]
