--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,21 @@ version = "0.1.0"
 authors = ["Naveneetha Vasudevan <naveneetha@yahoo.com>"]
 edition = "2018"
 
+[lib]
+name = "transitiond"
+path = "src/lib.rs"
+
+[[bin]]
+name = "transitiond"
+path = "src/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 regex = "1.5.4"
 lazy_static = "1.4.0"
 rand = "0.8.4"
+zip = "0.5.13"
 
 [dependencies.pyo3]
 version = "0.13.2"
